# RESILIENT

./: .gitattributes  .gitignore  CITATION.cff  CITATION.md  CMakeLists.txt  README.md
example/: CITATION.md
example/surface_mesh/: mesh_material.vtp  seedPoints.txt
src/: AveragingOrientation.cpp  AveragingOrientation.h  Config.cpp  Config.h  ConvertTetgenio.cpp  ConvertTetgenio.h  DataFormat.cpp  DataFormat.h  FiberOrientation.cpp  FiberOrientation.h  FindAndMarkSeedPoints.cpp  FindAndMarkSeedPoints.h  Headers.h  Material.h  Methods.cpp  Methods.h  Reader.cpp  Reader.h  SetAtrialFiberOrientation.cpp  SetAtrialFiberOrientation.h  TestTetrahedralize.cpp  TestTetrahedralize.h  Writer.cpp  Writer.h
